Finished designing home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -55,9 +55,71 @@
             </div>
         </div>
     </div>
-    <section>
-
+    <section class="about">
+        <div  class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/features1.jpg" class="about-image">
+                    <h2>Lorem Ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
+                    repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
+                    <a href="#" class="btn btn-default">Learn More</a>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/features2.jpg" class="about-image">
+                    <h2>Lorem Ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
+                    repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
+                    <a href="#" class="btn btn-default">Learn More</a>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/features3.jpg" class="about-image">
+                    <h2>Lorem Ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
+                    repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
+                    <a href="#" class="btn btn-default">Learn More</a>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <section class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col col-md-5 features-list">
+                    <h1>Pixel Me Features</h1>
+                    <ul>
+                        <li><i class="glyphicon glyphicon-ok"></i> Aliquam in metus mattis</li>
+                        <li><i class="glyphicon glyphicon-ok"></i> Cras eu odio tristique</li>
+                        <li><i class="glyphicon glyphicon-ok"></i> Fusce posuere massa sit</li>
+                        <li><i class="glyphicon glyphicon-ok"></i> Imperdiet magna quis</li>
+                        <li><i class="glyphicon glyphicon-ok"></i> Dignissim mi</li>
+                    </ul>
+                </div>
+                <div class="col col-md-4 col-md-offset-2">
+                    <img src="img/logo.svg" class="features-image">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <p>Copyright &copy; 2016, All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
