Created about and contact pages, finished responsive mobile design for index page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/queries.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300italic,300' rel='stylesheet' type='text/css'>
 </head>
 
@@ -55,25 +56,25 @@
             </div>
         </div>
     </div>
-    <section class="about">
+    <section class="how-it-works">
         <div  class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="img/features1.jpg" class="about-image">
+                    <img src="img/features1.jpg" class="how-it-works-image">
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
                     repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
                     <a href="#" class="btn btn-default">Learn More</a>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/features2.jpg" class="about-image">
+                    <img src="img/features2.jpg" class="how-it-works-image">
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
                     repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
                     <a href="#" class="btn btn-default">Learn More</a>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/features3.jpg" class="about-image">
+                    <img src="img/features3.jpg" class="how-it-works-image">
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium est vero quibusdam totam ab cum dolorum,
                     repellendus, laborum consectetur blanditiis dignissimos assumenda ipsa voluptate eveniet a, temporibus nulla tenetur qui!</p>
@@ -106,7 +107,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -114,7 +115,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <p>Copyright &copy; 2016, All Rights Reserved</p>
                 </div>
             </div>
