--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/queries.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300italic,300' rel='stylesheet' type='text/css'>
 </head>
 
@@ -34,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/index.html">Home</a></li>
                     <li class="active"><a href="#">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -140,7 +141,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -148,7 +149,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <p>Copyright &copy; 2016, All Rights Reserved</p>
                 </div>
             </div>
